--- a/tours/mashhad-organizational.html
+++ b/tours/mashhad-organizational.html
@@ -38,8 +38,8 @@
                 <li><a href="../contact.html">تماس با ما</a></li>
             </ul>
             <div class="auth-buttons">
-                <a href="../login.html" class="btn btn-login">ورود</a>
-                <a href="../register.html" class="btn btn-register">ثبت نام</a>
+                <a href="https://tourun.ir/user/login" class="btn btn-login">ورود</a>
+                <a href="https://tourun.ir/user/register" class="btn btn-register">ثبت نام</a>
             </div>
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
