--- a/tours/qazvin-organizational.html
+++ b/tours/qazvin-organizational.html
@@ -27,6 +27,13 @@
                 <li><a href="../about.html">درباره ما</a></li>
                 <li><a href="../contact.html">تماس با ما</a></li>
             </ul>
+            <div class="auth-buttons">
+                <a href="https://tourun.ir/user/login" class="btn btn-login">ورود</a>
+                <a href="https://tourun.ir/user/register" class="btn btn-register">ثبت نام</a>
+            </div>
+            <button class="mobile-menu-btn">
+                <i class="fas fa-bars"></i>
+            </button>
         </nav>
     </header>
 
