resolve tours page bug fixed

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
           <div class="swiper-slide">
             <div class="tour-card">
-              <img src="images/قشم.jpg" alt="تور قشم" class="tour-image">
+              <img src="images/قشم.jpg" alt="تور جزیره قشم ویژه سازمانها" class="tour-image">
               <div class="tour-content">
                 <h3 class="tour-title">تور قشم ویژه سازمان ها</h3>
                 <p class="tour-description">قشم؛ جایی برای کشف هم‌دیگه، نه فقط جزیره
