added new pages

--- a/tours/isfahan-organizational.html
+++ b/tours/isfahan-organizational.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="رزرو تور قشم سازمانی با اقامت ۳ شب و ۴ روز، هتل‌های ۲ و ۳ ستاره، گشت کامل جزیره، تفریحات دریایی، پذیرایی کامل و حمل‌ونقل انتخابی. ظرفیت محدود!">
-    <meta name="keywords" content="تور قشم, تور قشم سازمانی, تور تفریحی قشم, سفر گروهی قشم, رزرو تور قشم, هتل قشم, تور قشم با گشت, تور قشم با هواپیما, تور ۳ شب و ۴ روز قشم, تور اداری قشم, تور قشم ویژه شرکت‌ها">
-    <title>تور قشم ویژه سازمان‌ها | ۳ شب و ۴ روز با گشت کامل + هتل ساحلی</title>
+    <meta name="description" content="رزرو تور اصفهان سازمانی با اقامت ۳ شب و ۴ روز، هتل‌های ۲ و ۳ ستاره در مرکز شهر، گشت کامل شهر شامل میدان نقش جهان، عالی قاپو، بازار قیصریه، سی و سه پل، چهل ستون، هشت بهشت، حمام شیخ بهایی، مسجد شیخ لطف‌الله، کلیسای وانک و مسجد جامع. پذیرایی کامل با منوی متنوع و حمل‌ونقل انتخابی (اتوبوس، قطار، هواپیما). ظرفیت محدود!">
+    <meta name="keywords" content="تور اصفهان, تور اصفهان سازمانی, تور تاریخی اصفهان, سفر گروهی اصفهان, رزرو تور اصفهان, هتل اصفهان, تور اصفهان با گشت, تور اصفهان با هواپیما, تور ۳ شب و ۴ روز اصفهان, تور اداری اصفهان, تور اصفهان ویژه شرکت‌ها">
+    <title>تور اصفهان ویژه سازمان‌ها | ۳ شب و ۴ روز با گشت کامل + هتل مجهز</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -24,7 +24,7 @@
                 <li><a href="../rules.html">قوانین</a></li>
                 <li><a href="../contact.html">تماس با ما</a></li>
             </ul>
-           <div class="auth-buttons">
+            <div class="auth-buttons">
                 <a href="https://tourun.ir/user/login" class="btn btn-login">ورود</a>
                 <a href="https://tourun.ir/user/register" class="btn btn-register">ثبت نام</a>
             </div>
@@ -38,8 +38,8 @@
         <section class="tour-details-section">
             <div class="tour-details-container">
                 <div class="tour-header">
-                    <h1>تور قشم ویژه سازمان‌ها</h1>
-                    <p class="tour-subtitle">سفری به سرزمین شگفتی‌های طبیعی</p>
+                    <h1>تور اصفهان ویژه سازمان‌ها</h1>
+                    <p class="tour-subtitle">سفری به نصف جهان</p>
                 </div>
 
                 <div class="tour-main-info">
@@ -51,7 +51,7 @@
                     <div class="info-card">
                         <i class="fas fa-plane"></i>
                         <h3>نوع حمل و نقل</h3>
-                        <p>هواپیما</p>
+                        <p>اتوبوس، قطار، هواپیما</p>
                     </div>
                     <div class="info-card">
                         <i class="fas fa-utensils"></i>
@@ -61,49 +61,54 @@
                     <div class="info-card">
                         <i class="fas fa-hotel"></i>
                         <h3>اقامت</h3>
-                        <p>هتل‌های ۲ و ۳ ستاره (۱۰ دقیقه تا دریا)</p>
+                        <p>هتل‌های ۲ و ۳ ستاره (مرکز شهر)</p>
                     </div>
                 </div>
 
                 <div class="tour-description">
                     <h2>توضیحات تور</h2>
-                    <p>🌟 تور قشم ویژه سازمان‌ها – سفری به سرزمین شگفتی‌های طبیعی 🌟</p>
-                    <p>تصور کنید صبح با نسیم خنک خلیج فارس از خواب بیدار می‌شوید، آفتاب طلایی جنوب روی صورتتان می‌تابد و عطر غذاهای محلی جنوبی مشامتان را نوازش می‌دهد...</p>
-                    <p>قشم، این نگین درخشان خلیج فارس، با طبیعت بکر، شگفتی‌های طبیعی و مهمان‌نوازی بی‌نظیر، منتظر شماست تا خاطراتی فراموش‌نشدنی را رقم بزنید.</p>
+                    <p>🌟 تور اصفهان ویژه سازمان‌ها – سفری به نصف جهان 🌟</p>
+                    <p>تصور کنید در میدان نقش جهان قدم می‌زنید، در عالی قاپو به موسیقی گوش می‌دهید و در بازار قیصریه از صنایع دستی لذت می‌برید...</p>
+                    <p>اصفهان، این نگین درخشان ایران، با معماری بی‌نظیر، هنرهای دستی و مهمان‌نوازی بی‌نظیر، منتظر شماست تا خاطراتی فراموش‌نشدنی را رقم بزنید.</p>
 
                     <h3>✨ چرا این تور را انتخاب کنید؟</h3>
-                    <p>ما معتقدیم هر سفر، فرصتی است برای ایجاد پیوندهای عمیق‌تر بین همکاران و کشف شگفتی‌های طبیعت. در این تور، ما نه فقط یک سفر، بلکه یک ماجراجویی منحصر به فرد در قلب خلیج فارس را برای شما طراحی کرده‌ایم.</p>
+                    <p>ما معتقدیم هر سفر، فرصتی است برای ایجاد پیوندهای عمیق‌تر بین همکاران و کشف شگفتی‌های فرهنگ و هنر ایران. در این تور، ما نه فقط یک سفر، بلکه یک ماجراجویی منحصر به فرد در قلب ایران را برای شما طراحی کرده‌ایم.</p>
 
                     <h3>📦 خدمات و امکانات تور:</h3>
                     <h4>🏨 اقامت رویایی:</h4>
                     <ul>
-                        <li>هتل‌های ۲ و ۳ ستاره با دسترسی آسان به دریا (فقط ۱۰ دقیقه پیاده‌روی)</li>
+                        <li>هتل‌های ۲ و ۳ ستاره در مرکز شهر</li>
                         <li>اتاق‌های مجهز و تمیز با امکانات کامل</li>
-                        <li>چشم‌انداز زیبا به خلیج فارس و فضای آرامش‌بخش</li>
+                        <li>دسترسی آسان به جاذبه‌های گردشگری</li>
                     </ul>
 
                     <h4>✈️ سفر راحت و بی‌دغدغه:</h4>
                     <ul>
-                        <li>پرواز رفت و برگشت از تهران با هواپیمای معتبر</li>
+                        <li>انتخاب بین اتوبوس، قطار یا هواپیما</li>
                         <li>ترانسفر رایگان فرودگاهی و هتلی</li>
                         <li>حمل چمدان تا ۲۰ کیلوگرم</li>
                     </ul>
 
-                    <h4>🍽 پذیرایی با طعم جنوب:</h4>
+                    <h4>🍽 پذیرایی با طعم اصفهان:</h4>
                     <ul>
                         <li>صبحانه، ناهار و شام با منوی متنوع و با کیفیت</li>
-                        <li>غذاهای محلی جنوبی با طعم‌های اصیل</li>
+                        <li>غذاهای محلی اصفهانی با طعم‌های اصیل</li>
                         <li>نوشیدنی‌های خنک و میان‌وعده‌های مقوی</li>
                         <li>فضای صمیمی برای دورهمی و گفتگو</li>
                     </ul>
 
                     <h4>🎯 گشت‌های هیجان‌انگیز:</h4>
                     <ul>
-                        <li>دره ستارگان: شاهکار طبیعت و معماری سنگی</li>
-                        <li>جنگل حرا: تجربه منحصر به فرد در بزرگترین جنگل دریایی جهان</li>
-                        <li>گنبد نمکی و غار نمکدان: شگفتی‌های زیرزمینی قشم</li>
-                        <li>قلعه پرتغالی‌ها: سفر به تاریخ و معماری استعماری</li>
-                        <li>پارک کروکودیل‌ها: تماشای خزندگان عظیم‌الجثه</li>
+                        <li>میدان نقش جهان: قلب تپنده اصفهان</li>
+                        <li>عالی قاپو: کاخ باشکوه صفوی</li>
+                        <li>بازار قیصریه: بهشت خرید صنایع دستی</li>
+                        <li>سی و سه پل: شاهکار معماری صفوی</li>
+                        <li>چهل ستون: کاخ باشکوه با نقاشی‌های دیواری</li>
+                        <li>هشت بهشت: باغ رویایی صفوی</li>
+                        <li>حمام شیخ بهایی: شاهکار معماری و مهندسی</li>
+                        <li>مسجد شیخ لطف‌الله: گنبد بی‌نظیر کاشی‌کاری</li>
+                        <li>کلیسای وانک: موزه هنر ارمنی</li>
+                        <li>مسجد جامع: یادگار دوران‌های مختلف</li>
                     </ul>
 
                     <h3>👥 ویژه سازمان‌ها و گروه‌های کاری</h3>
@@ -128,7 +133,7 @@
                         <div class="service-item">
                             <i class="fas fa-bus"></i>
                             <h3>حمل و نقل</h3>
-                            <p>ترانسفر فرودگاهی و هتلی</p>
+                            <p>انتخاب بین اتوبوس، قطار یا هواپیما</p>
                         </div>
                         <div class="service-item">
                             <i class="fas fa-user-tie"></i>
@@ -152,28 +157,24 @@
                     <h2>جاذبه‌های گردشگری</h2>
                     <div class="attractions-grid">
                         <div class="attraction-item">
-                            <img src="../images/دره ستارگان قشم.jpg" alt="دره ستارگان قشم">
-                            <h3>دره ستارگان</h3>
-                            <p>شاهکار طبیعت در دل جزیره
-                            جایی که هر ستون سنگی، داستانی از میلیون‌ها سال پیش را روایت می‌کند.</p>
+                            <img src="../images/میدان نقش جهان اصفهان.jpg" alt="میدان نقش جهان">
+                            <h3>میدان نقش جهان</h3>
+                            <p>قلب تپنده اصفهان، جایی که تاریخ و هنر در هم می‌آمیزند و شکوه معماری ایرانی را به رخ می‌کشند.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/جنگل حرا قشم.jpg" alt="جنگل حرا قشم">
-                            <h3>جنگل حرا</h3>
-                            <p>بزرگترین جنگل دریایی جهان
-                            جایی که درختان و دریا در هم می‌آمیزند و منظره‌ای بی‌نظیر خلق می‌کنند.</p>
+                            <img src="../images/عالی قاپو اصفهان.jpg" alt="عالی قاپو">
+                            <h3>عالی قاپو</h3>
+                            <p>کاخ باشکوه صفوی با معماری منحصر به فرد و تالار موسیقی بی‌نظیرش.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/قلعه پرتقالی ها.jpg" alt="قلعه پرتغالی‌ها قشم">
-                            <h3>قلعه پرتغالی‌ها</h3>
-                            <p>گنجینه تاریخی قشم
-                            جایی که هر سنگ، روایتی از تاریخ پر فراز و نشیب جزیره دارد.</p>
+                            <img src="../images/بازار قیصریه اصفهان.jpg" alt="بازار قیصریه">
+                            <h3>بازار قیصریه</h3>
+                            <p>بازار سنتی با معماری خاص و صنایع دستی متنوع، جایی برای خرید سوغاتی‌های اصیل اصفهانی.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/پارک کروکودیل های قشم.jpg" alt="پارک کروکودیل‌ها قشم">
-                            <h3>پارک کروکودیل‌ها</h3>
-                            <p>تجربه هیجان‌انگیز در کنار خزندگان عظیم
-                            جایی که می‌توانید از نزدیک با این موجودات شگفت‌انگیز آشنا شوید.</p>
+                            <img src="../images/سی وسه پل اصفهان.jpg" alt="سی و سه پل">
+                            <h3>سی و سه پل</h3>
+                            <p>پل تاریخی با ۳۳ دهانه، شاهکار معماری صفوی و نماد شهر اصفهان.</p>
                         </div>
                     </div>
                 </div>
@@ -199,7 +200,6 @@
             <div class="footer-section">
                 <h3>شبکه‌های اجتماعی</h3>
                 <div class="social-links">
-                    <a href="https://instagram.com/keyjaro.ir"><i class="fab fa-instagram"></i></a>
                     <a href="https://instagram.com/keyjaro.ir"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
