--- a/tours/yazd-organizational.html
+++ b/tours/yazd-organizational.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="رزرو تور یزد سازمانی با اقامت ۳ شب و ۴ روز، هتل‌های ۳ و ۴ ستاره، گشت کامل شهر، باغ دولت‌آباد، مسجد جامع، آتشکده، زندان اسکندر و جاذبه‌های تاریخی یزد. پذیرایی کامل و حمل‌ونقل انتخابی. ظرفیت محدود!">
+    <meta name="description" content="رزرو تور یزد سازمانی با اقامت ۳ شب و ۴ روز، هتل‌های ۲ و ۳ ستاره در مرکز شهر، گشت کامل شهر شامل مسجد جامع، آتشکده، آب انبار شش بادگیر، موزه آینه و روشنگری، زندان اسکندر، باغ دولت، میدان امیر چخماق، ارگ حکومتی یزد، موزه خزندگان و بقعه ۱۲ امام. پذیرایی کامل و حمل‌ونقل انتخابی (اتوبوس، قطار، هواپیما). ظرفیت محدود!">
     <meta name="keywords" content="تور یزد, تور یزد سازمانی, تور تاریخی یزد, سفر گروهی یزد, رزرو تور یزد, هتل یزد, تور یزد با گشت, تور یزد با هواپیما, تور ۳ شب و ۴ روز یزد, تور اداری یزد, تور یزد ویژه شرکت‌ها">
     <title>تور یزد ویژه سازمان‌ها | ۳ شب و ۴ روز با گشت کامل + هتل مجهز</title>
     <link rel="stylesheet" href="../css/style.css">
@@ -58,39 +58,26 @@
             <h2>توضیحات تور</h2>
             <p>تور سازمانی یزد، یک سفر تاریخی و فرهنگی به اولین شهر خشتی جهان است. این تور شامل بازدید از جاذبه‌های تاریخی و معماری یزد، اقامت در هتل‌های مجهز و پذیرایی کامل می‌باشد.</p>
 
-            <h3>برنامه سفر:</h3>
-            <h4>روز اول:</h4>
+            <h3>خدمات تور:</h3>
             <ul>
-                <li>ورود به یزد و استقرار در هتل</li>
-                <li>صرف نهار در رستوران هتل</li>
-                <li>بازدید از مسجد جامع یزد</li>
-                <li>شام در رستوران سنتی</li>
+                <li>اقامت در هتل‌های ۲ و ۳ ستاره در مرکز شهر</li>
+                <li>پذیرایی کامل (صبحانه، نهار و شام)</li>
+                <li>حمل و نقل انتخابی (اتوبوس، قطار، هواپیما)</li>
+                <li>راهنمای مجرب و متخصص</li>
             </ul>
 
-            <h4>روز دوم:</h4>
+            <h3>جاذبه‌های گردشگری:</h3>
             <ul>
-                <li>صبحانه در هتل</li>
-                <li>بازدید از باغ دولت‌آباد</li>
-                <li>ناهار در رستوران سنتی</li>
-                <li>بازدید از آتشکده یزد</li>
-                <li>شام در رستوران هتل</li>
-            </ul>
-
-            <h4>روز سوم:</h4>
-            <ul>
-                <li>صبحانه در هتل</li>
-                <li>بازدید از زندان اسکندر</li>
-                <li>ناهار در رستوران هتل</li>
-                <li>گشت بازار سنتی</li>
-                <li>شام در رستوران هتل</li>
-            </ul>
-
-            <h4>روز چهارم:</h4>
-            <ul>
-                <li>صبحانه در هتل</li>
-                <li>خرید از بازار سنتی</li>
-                <li>ناهار در رستوران هتل</li>
-                <li>خروج از یزد</li>
+                <li>مسجد جامع یزد</li>
+                <li>آتشکده یزد</li>
+                <li>آب انبار شش بادگیر</li>
+                <li>موزه آینه و روشنگری</li>
+                <li>زندان اسکندر</li>
+                <li>باغ دولت‌آباد</li>
+                <li>میدان امیر چخماق</li>
+                <li>ارگ حکومتی یزد</li>
+                <li>موزه خزندگان</li>
+                <li>بقعه ۱۲ امام</li>
             </ul>
         </div>
 
@@ -99,7 +86,7 @@
             <div class="service-item">
                 <i class="fas fa-hotel"></i>
                 <h3>اقامت</h3>
-                <p>اقامت در هتل‌های ۳ و ۴ ستاره یزد</p>
+                <p>اقامت در هتل‌های ۲ و ۳ ستاره در مرکز شهر</p>
             </div>
             <div class="service-item">
                 <i class="fas fa-utensils"></i>
@@ -109,7 +96,7 @@
             <div class="service-item">
                 <i class="fas fa-bus"></i>
                 <h3>حمل و نقل</h3>
-                <p>اتوبوس VIP یا مینی‌بوس مجهز</p>
+                <p>انتخاب بین اتوبوس، قطار یا هواپیما</p>
             </div>
             <div class="service-item">
                 <i class="fas fa-user-tie"></i>
@@ -121,24 +108,54 @@
         <div class="tour-attractions">
             <h2>جاذبه‌های گردشگری</h2>
             <div class="attraction-item">
-                <img src="../images/yazd/jame-mosque.jpg" alt="مسجد جامع یزد">
+                <img src="../images/مسجد جامع یزد.jpg" alt="مسجد جامع یزد">
                 <h3>مسجد جامع یزد</h3>
-                <p>یکی از شاهکارهای معماری اسلامی با مناره‌های بلند و کاشی‌کاری‌های زیبا</p>
+                <p>جایی برای گفت‌وگوی بی‌کلام؛ جایی که دل‌ها پیش از کلمات به هم سلام می‌کنند.</p>
             </div>
             <div class="attraction-item">
-                <img src="../images/yazd/dolat-abad.jpg" alt="باغ دولت‌آباد">
-                <h3>باغ دولت‌آباد</h3>
-                <p>باغ تاریخی با بلندترین بادگیر جهان و معماری منحصر به فرد</p>
-            </div>
-            <div class="attraction-item">
-                <img src="../images/yazd/fire-temple.jpg" alt="آتشکده یزد">
+                <img src="../images/آتشکده یزد.jpg" alt="آتشکده یزد">
                 <h3>آتشکده یزد</h3>
-                <p>معبد زرتشتیان با آتش مقدس ۱۵۰۰ ساله</p>
+                <p>جایی که آتش دل‌ها خاموش نمی‌شود؛ اگر قراره جرقه‌ای بین‌مون بخوره، اینجا شروعشه</p>
             </div>
             <div class="attraction-item">
-                <img src="../images/yazd/alexander-prison.jpg" alt="زندان اسکندر">
+                <img src="../images/آب انبار شش بادگیر یزد.jpg.jpg" alt="آب انبار شش بادگیر">
+                <h3>آب انبار شش بادگیر</h3>
+                <p>جایی که نسیم می‌رقصه و سکوت، قصه‌ی خنکی رو می‌گه؛ اگه دل‌مون قراره خنک بشه، اینجاست.</p>
+            </div>
+            <div class="attraction-item">
+                <img src="../images/موزه آیینه و روشنگی یزد.jpg" alt="موزه آینه و روشنگری">
+                <h3>موزه آینه و روشنگری</h3>
+                <p>جایی که هر تکه آینه یه داستان داره؛ شاید تصویر من و تو، همونیه که منتظرشه بازتاب بشه.</p>
+            </div>
+            <div class="attraction-item">
+                <img src="../images/زندان اسکندر یزد.jpg" alt="زندان اسکندر">
                 <h3>زندان اسکندر</h3>
-                <p>بنای تاریخی با معماری خاص و گنبد خشتی</p>
+                <p>جایی که زمان زندونه، اما دل می‌تونه آزاد عاشق شه</p>
+            </div>
+            <div class="attraction-item">
+                <img src="../images/باغ دولت آباد یزد.jpg" alt="باغ دولت‌آباد">
+                <h3>باغ دولت‌آباد</h3>
+                <p>جایی که طبیعت نفس می‌کشه و دل آروم می‌گیره؛ شاید قدم‌زدن کنار تو، بهترین راه شاهی باشه.</p>
+            </div>
+            <div class="attraction-item">
+                <img src="../images/میدان امیر چخماخ یزد.jpg" alt="میدان امیر چخماق">
+                <h3>میدان امیر چخماق</h3>
+                <p>جایی که شکوه تاریخ با نورها قرار عاشقونه می‌ذاره؛ شاید امشب، وسط این عظمت، یه دل کوچیک جفت شه.</p>
+            </div>
+            <div class="attraction-item">
+                <img src="../images/ازگ حکومتی یزد.jpg" alt="ارگ حکومتی یزد">
+                <h3>ارگ حکومتی یزد</h3>
+                <p>جایی که قدرت خوابیده، ولی یه نگاه تو می‌تونه دل رو بیدار کنه.</p>
+            </div>
+            <div class="attraction-item">
+                <img src="../images/موزه خزندگان یزد.jpg" alt="موزه خزندگان">
+                <h3>موزه خزندگان</h3>
+                <p>جایی که ترس‌ها زیر نور ویترینن... اما کنار تو، حتی مارها هم بامزه‌ن!</p>
+            </div>
+            <div class="attraction-item">
+                <img src="../images/بقعه 12 امام.jpg" alt="بقعه ۱۲ امام">
+                <h3>بقعه ۱۲ امام</h3>
+                <p>جایی که آرامش روح‌ها جمع شده؛ شاید اینجا بهترین مکان باشه برای شروع یه دوستی مقدس.</p>
             </div>
         </div>
 
